@@ -33,4 +33,5 @@ corporate_tax_consumer_goods_hit = {
 	enable = { always = yes }
 
 	consumer_goods_factor = consumer_goods_from_corporate_tax
+	receiving_investment_cost_modifier = receiving_investment_cost_form_corporate_tax
 }
