@@ -37,6 +37,7 @@ ideas = {
 				intelligence_agency_defense = -1
 				foreign_influence_defense_modifier = -0.50
 				tax_gain_multiplier_modifier = -0.35
+				receiving_investment_cost_modifier = 0.45
 			}
 
 			cancel_if_invalid = no
@@ -87,6 +88,7 @@ ideas = {
 				intelligence_agency_defense = -0.9
 				foreign_influence_defense_modifier = -0.45
 				tax_gain_multiplier_modifier = -0.30
+				receiving_investment_cost_modifier = 0.40
 			}
 
 			cancel_if_invalid = no
@@ -138,6 +140,7 @@ ideas = {
 				intelligence_agency_defense = -0.8
 				foreign_influence_defense_modifier = -0.40
 				tax_gain_multiplier_modifier = -0.25
+				receiving_investment_cost_modifier = 0.35
 			}
 
 			cancel_if_invalid = no
@@ -186,6 +189,7 @@ ideas = {
 				intelligence_agency_defense = -0.7
 				foreign_influence_defense_modifier = -0.35
 				tax_gain_multiplier_modifier = -0.20
+				receiving_investment_cost_modifier = 0.30
 			}
 
 			cancel_if_invalid = no
@@ -233,6 +237,7 @@ ideas = {
 				intelligence_agency_defense = -0.6
 				foreign_influence_defense_modifier = -0.30
 				tax_gain_multiplier_modifier = -0.15
+				receiving_investment_cost_modifier = 0.25
 			}
 
 			cancel_if_invalid = no
@@ -277,6 +282,7 @@ ideas = {
 				intelligence_agency_defense = -0.5
 				foreign_influence_defense_modifier = -0.25
 				tax_gain_multiplier_modifier = -0.10
+				receiving_investment_cost_modifier = 0.20
 			}
 
 			cancel_if_invalid = no
@@ -321,6 +327,7 @@ ideas = {
 				intelligence_agency_defense = -0.4
 				foreign_influence_defense_modifier = -0.20
 				tax_gain_multiplier_modifier = -0.05
+				receiving_investment_cost_modifier = 0.15
 			}
 
 			cancel_if_invalid = no
@@ -365,6 +372,7 @@ ideas = {
 				intelligence_agency_defense = -0.3
 				foreign_influence_defense_modifier = -0.15
 				tax_gain_multiplier_modifier = -0.03
+				receiving_investment_cost_modifier = 0.10
 			}
 
 			cancel_if_invalid = no
@@ -408,6 +416,7 @@ ideas = {
 				intelligence_agency_defense = -0.2
 				foreign_influence_defense_modifier = -0.10
 				tax_gain_multiplier_modifier = -0.01
+				receiving_investment_cost_modifier = 0.05
 			}
 
 			cancel_if_invalid = no
