@@ -133,7 +133,9 @@ ideas = {
 					apply_industrial_conglomerates_dynamic_effect_DYNMOD = yes
 				}
 			}
-
+			modifier = {
+				investment_duration_modifier = -0.25
+			}
 			ai_will_do = {
 				factor = 0
 			}
@@ -813,6 +815,7 @@ ideas = {
 
 			modifier = {
 				corruption_cost_factor = 0.25
+				receiving_investment_duration_modifier = -0.25
 			}
 
 			on_add = {
