@@ -30,3 +30,39 @@
 #	category = air
 #	category = country
 #}
+
+# Investment Duration Modifier:
+# Purpose: Your projects duration increased or decrease based on this modifier
+investment_duration_modifier = {
+	color_type = good
+	value_type = percentage
+	precision = 2
+	category = country
+}
+
+# Receiving Investment Duration Modifier:
+# Purpose: Anybody sending you a project may have their duration increased or decrease based on this modifier
+receiving_investment_duration_modifier = {
+	color_type = bad
+	value_type = percentage
+	precision = 2
+	category = country
+}
+
+# Investment Cost Modifier:
+# Purpose: Your projects cost increased or decrease based on this modifier
+investment_cost_modifier = {
+	color_type = good
+	value_type = percentage
+	precision = 2
+	category = country
+}
+
+# Receiving Cost Modifier:
+# Purpose: Anybody sending you a project may have their cost increased or decrease based on this modifier
+receiving_investment_cost_modifier = {
+	color_type = bad
+	value_type = percentage
+	precision = 2
+	category = country
+}
