@@ -100,7 +100,9 @@ calculate_tax_rate = {
 			add_dynamic_modifier = { modifier = corporate_tax_consumer_goods_hit }
 		}
 		set_variable = { consumer_goods_from_corporate_tax = corporate_tax_rate }
+		set_variable = { ` = corporate_tax_rate }
 		divide_variable = { consumer_goods_from_corporate_tax = 100 }
+		divide_variable = { receiving_investment_cost_form_corporate_tax = 100 }
 		multiply_variable = { consumer_goods_from_corporate_tax = 1.5 } # Doubles the Consumer Goods Penalty
 
 		if = {
