@@ -243,12 +243,12 @@
  AC_cancel_investment_tt: "Cancel the following investment from [From.GetName]:"
 
  # Build Cost Tooltip
- AC_build_cost_tt: "§YForeign Investment Cost§!\n\n§YForeign Investment Cost§! §gis the upfront cost of the project we are considering starting. It is directly taken from our nations treasury and added to our§! §YInternational Investments§! §gupon acceptance of the project.§!\n\n§gIf you just clicked from another country or state make sure you up the building amount or click another building to update the tooltip to see true cost.§!\n"
- AC_build_cost_tt_delayed: "Modifiers:\n[AC_GetCorruption][AC_ITA_cost]§YCorporate Tax Rate Penalty:§! §R+§![?ROOT.corporate_cost_modifier|0-%]\n"
+ AC_build_cost_tt: "§YForeign Investment Cost§!\n\n§YForeign Investment Cost§! §gis the upfront cost of the project we are considering starting. It is directly taken from our nations treasury and added to our§! §YInternational Investments§! §gupon acceptance of the project.§!\n\n§gIf you just clicked from another country or state make sure you up the building amount or click another building to update the tooltip to see true cost.§!\n\n§gCorruption, national ideas and more can effect the cost of the investment project. The investee nation's corruption will increase the cost of the project based on their corruption level.§!\n"
+ AC_build_cost_tt_delayed: "Modifiers:\n§YCost to Invest in [Prev.Controller.GetNamewithFlag]:§! [?ROOT.displayable_monetary_cost_modifier|%0-] \n"
 
  # Construction Time Tooltip
  AC_clock_tt: "§YTime to Complete Investment:§! [?ROOT.project_total_construction_duration_display^-1] Days\n\n§YTime to Complete Investment§! §gor the duration of the project is simply a total of the time it will take to complete our propose project. The more buildings you are offering to §Y[Prev.Controller.GetNamewithFlag]§! the longer the project.§!\n\n§gIf you just clicked from another country or state make sure you up the building amount or click another building to update the tooltip to see true cost.§!\n"
- AC_clock_tt_delayed: "Modifiers:\n[AC_HasChaebols][AC_HasIndustrialConglomerates][AC_ITA_time][AC_GetInfrastructure]"
+ AC_clock_tt_delayed: "Modifiers:\n[AC_GetInfrastructure]\n§YTime to Invest in [Prev.Controller.GetNamewithFlag]:§! [?ROOT.displayable_construction_modifier|%0]\n"
 
  # Misc Investment
  AC_page_up: "Next Page"
@@ -268,10 +268,6 @@
  AC_Corruption_3: "§Y$modest_corruption$:§! §R+10%§!\n"
  AC_Corruption_2: "§Y$slight_corruption$:§! §R+5%§!\n"
  AC_Corruption_1: "§Y$negligible_corruption$:§! §G+0%§!\n"
-
- # Idea Modifiers - Modifies Time of Project
- AC_has_chaebols_time_tt: "§Y$chaebols$:§! §G-25%§!\n"
- AC_has_industrial_conglomerates_time_tt: "§Y$industrial_conglomerates$:§! §G-25%§!\n"
 
  # Misc - Infrastructure "Time increase" for construction
  AC_Infrastructure_0: "§YInfrastucture§! Level 0 §R+50%§!"
