@@ -61,7 +61,7 @@
  industrial_conglomerates_desc: "Huge companies, whether they be private or government-owned, can have very large bargaining power over the politics, policy, and regulations of a nation.\n"
  allowed_internal_faction_mass_privitazation_IFT: "Now Allows for §YMass Privatization§!"
  industrial_conglomerates_dynamic_modifier: "£pol_idea $industrial_conglomerates$"
- industrial_conglomerates_opinion_tt: "Opinion of §Y$industrial_conglomerates$§!: [IND_opinion_display]\n\n§YEffects from Opinion:§!\n§YInfrastructure§! Construction Speed: [?THIS.ICL_psifra_factor_var|%+]\nResource Gain Efficiency: [?THIS.ICL_local_resources_factor_var|%+]\nDaily Emerging Support: [?THIS.ICL_communism_drift|+]\nAcceptance of Emerging Diplomacy: [?THIS.ICL_communism_acceptance_factor_var|+]\n§YForeign Investment§! Duration: §G-25%§!\n"
+ industrial_conglomerates_opinion_tt: "Opinion of §Y$industrial_conglomerates$§!: [IND_opinion_display]\n\n§YEffects from Opinion:§!\n§YInfrastructure§! Construction Speed: [?THIS.ICL_psifra_factor_var|%+]\nResource Gain Efficiency: [?THIS.ICL_local_resources_factor_var|%+]\nDaily Emerging Support: [?THIS.ICL_communism_drift|+]\nAcceptance of Emerging Diplomacy: [?THIS.ICL_communism_acceptance_factor_var|+]\n"
  positive_ind_tt: "§G[?THIS.industrial_conglomerates_opinion|0]§!"
  negative_ind_tt: "§R[?THIS.industrial_conglomerates_opinion|0]§!"
  neutral_ind_tt: "§Y[?THIS.industrial_conglomerates_opinion|0]§!"
