@@ -112,6 +112,7 @@
 
  #Modifiers
  foreign_influence_defense_modifier: "§YForeign Influence Defense§! Multiplier"
+ foreign_influence_defense_modifier_desc: "$foreign_influence_defense_modifier$ is an modifier that weakens incoming foreign influence actions in our nation."
  foreign_influence_modifier: "§YForeign Influence§! Multiplier"
  tax_gain_multiplier_modifier: "§YTax Revenue§! Multiplier"
  interest_rate_multiplier_modifier: "§YInterest Rate§!"
@@ -139,6 +140,10 @@
  western_outlook_campaign_cost_modifier: "§Y$promote_outlook_decision_support_pro_western_parties$ Cost§! Multiplier"
  emerging_outlook_campaign_cost_modifier: "§Y$promote_outlook_decision_support_emerging_parties$ Cost§! Multiplier"
  nationalist_outlook_campaign_cost_modifier: "§Y$promote_outlook_decision_support_the_nationalists$ Cost§! Multiplier"
+ investment_duration_modifier: "§YForeign Investment§! Duration Modifier"
+ investment_cost_modifier: "§YForeign Investment§! Cost Modifier"
+ receiving_investment_duration_modifier: "§YReceiving Foreign Investment§! Duration Modifier"
+ receiving_investment_cost_modifier: "§YReceiving Foreign Investment§! Cost Modifier"
 
  # Custom Ship Class Max Tonnage
  modifier_production_cost_max_corvette: "Corvette Max Tonnage"
