@@ -68,6 +68,9 @@ GUI:
 Localisation:
  - Improve localisation for Rentier state - include information on when it will be removed
 
+Modding:
+ - Introduced four new custom modifiers for content purposes
+
 Performance:
  - Optimized on_startup on action so the game should load in faster
 
